[package]
name = "hank-pdk"
description = "A Rust plugin development kit for Hank"
license = "MIT"
homepage = "https://hank.chat"
repository = "https://github.com/hankchat/hank-rust-pdk"
readme = "README.md"
keywords = ["hank", "chat", "bot", "chatbot", "pdk"]
version = "0.1.2"
edition = "2021"

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} version {{version}}"

[dependencies]
extism-pdk = "1.2.1"
hank-types = "0.1.0"
prost = "0.13.2"
