[package]
name = "hank-pdk"
description = "A Rust plugin development kit for Hank"
license = "MIT"
homepage = "https://hank.chat"
repository = "https://github.com/hankchat/hank-rust-pdk"
readme = "README.md"
keywords = ["hank", "chat", "bot", "chatbot", "pdk"]
version = "0.1.47"
edition = "2021"

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} version {{version}}"

[dependencies]
extism-manifest = "1.6.0"
extism-pdk = "1.2.1"
hank-types = "0.1.50"
prost = "0.13.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.11.0", features = ["v4"] }
